<?xml version="1.0"?>
<package format="2">
  <name>mqtt_ros_cpp</name>
  <version>0.0.0</version>
  <description>The mqtt_ros_cpp package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">beuzeboc</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
